--- a/_posts/2017-10-26-dinosaurs.html
+++ b/_posts/2017-10-26-dinosaurs.html
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Dinosaurs are extinct today"
-subtitle: "because they lacked opposable thumbs and the brainpower to build a space program."
+title: "왜 안되는고야?!"
+subtitle: "이거 바꾸는거 맞아?!."
 date: 2017-10-26 23:45:13 -0400
-background: '/img/posts/01.jpg'
+background: '/img/posts/00_00_cover.png'
 ---
 
-<p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
+<p>텍트 테스트하니까 이거 바뀌는거 볼거라구!.</p>
 
 <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
 
